compiler/testData/diagnostics/tests/multiplatform/topLevelFun/definitionWithoutDeclaration.kt
// !LANGUAGE: +MultiPlatformProjects
// MODULE: m1-jvm
// FILE: jvm.kt

<!PLATFORM_DEFINITION_WITHOUT_DECLARATION!>impl<!> fun foo() { }
